--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="js ss-loaded" lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title> MyFyles - це зручно!</title>
+		<title>MyFiles - make it easy!</title>
 		<link rel="icon" type="image/x-icon" src="assets/logo.jpg">
 		<meta name="who am i?" content="">
 		<meta name="nemay" content="">
@@ -35,19 +35,19 @@
 					<nav class="column lg-12 main-nav">
 						<ul>
 							<li>
-								<a href="index.html" class="home-link">MyFyles</a>
+								<a href="index.html" class="home-link">MyFiles</a>
 							</li>
 							<li class="current">
-								<a href="index.html#intro" class="smoothscroll">Вітання</a>
+								<a href="index.html#intro" class="smoothscroll">Greetings</a>
 							</li>
 							<li class="">
-								<a href="index.html#about" class="smoothscroll">Про проект</a>
+								<a href="index.html#about" class="smoothscroll">About project</a>
 							</li>
 							<li class="">
-								<a href="index.html#works" class="smoothscroll">Про бот</a>
+								<a href="index.html#works" class="smoothscroll">About bot</a>
 							</li>
 							<li>
-								<a href="index.html#contact" class="smoothscroll">Про авторів</a>
+								<a href="index.html#contact" class="smoothscroll">About developers</a>
 							</li>
 						</ul>
 					</nav>
@@ -57,18 +57,18 @@
 				<section id="intro" class="s-intro target-section">
 					<div class="row intro-content wide">
 						<div class="column">
-							<div class="text-pretitle with-line" id="MyfilesMain" style="transform: translateX(0px); opacity: 1;">&gt;&gt;&gt;MyFyles</div>
-							<h1 class="text-huge-title" style="transform: translateX(0px); opacity: 1;">-Це зручно!</h1>
+							<div class="text-pretitle with-line" id="MyfilesMain" style="transform: translateX(0px); opacity: 1;">&gt;&gt;&gt;MyFiles</div>
+							<h1 class="text-huge-title" style="transform: translateX(0px); opacity: 1;">-Make it easy!</h1>
 						</div>
 						<ul class="intro-social">
 							<li style="transform: translateX(0px); opacity: 1;">
-								<a href="https://github.com/nemay9" target="_blank">GitHub</a>
+								<a href="https://github.com/nemay9" target="_blank"></a>
 							</li>
 							<li style="transform: translateX(0px); opacity: 1;">
-								<a href="https://discordapp.com/users/768491713210613830" target="_blank">Discord</a>
+								<a href="https://discordapp.com/users/768491713210613830" target="_blank"></a>
 							</li>
 							<li style="transform: translateX(0px); opacity: 1;">
-								<a href="https://t.me/MyFyles_bot" target="_blank">Telegram</a>
+								<a href="https://t.me/MyFyles_bot" target="_blank"></a>
 							</li>
 						</ul>
 					</div>
@@ -92,13 +92,13 @@
 						</div>
 						<div class="column lg-6 md-12">
 							<div class="about-info__text">
-								<h2 class="text-pretitle with-line" data-animate-el="" style="opacity: 1; transform: translateY(0px);">Що таке MyFyles?</h2>
-								<p class="attention-getter" data-animate-el="" style="opacity: 1; transform: translateY(0px);"> MyFyles - це надійний, безпечний, доступний і простий у використанні телеграм-бот для обміну різними видами файлів (фото, відео, аудіо, документи). Цифрової інформації стає все більше, MyFiles дозволяє завантажувати, зберігати та обмінюватися файлами будь-якого обсягу скрізь та завжди. </p>
+								<h2 class="text-pretitle with-line" data-animate-el="" style="opacity: 1; transform: translateY(0px);">What`s MyFiles?</h2>
+								<p class="attention-getter" data-animate-el="" style="opacity: 1; transform: translateY(0px);"> MyFiles is a reliable, safe, affordable and easy-to-use Telegram bot for sharing all kinds of files (photos, videos, audios, documents). Digital information is expanding daily, MyFiles allows you to upload, save and share files of any size, anywhere, anytime.</p>
 							</div>
 						</div>
 					</div>
 					<div class="row about-expertise ss-animated" data-animate-block="">
-						<video src="assets/Константинов Черкасов ТЕхно Україна 24.MOV" controls></video>
+						<video src="assets/Константинов Черкасов ТЕхно Україна 24.MOV" controls poster="assets/Video_preview.jpg"></video>
 
 						  
 						<div class="column lg-12"></div>
@@ -107,17 +107,17 @@
 					<div class="row about-timelines ss-animated" data-animate-block="">
 						
 						<div class="column lg-6 tab-12">
-							<h2 class="text-pretitle" data-animate-el="" style="opacity: 1; transform: translateY(0px);">Практичне застосування</h2>
+							<h2 class="text-pretitle" data-animate-el="" style="opacity: 1; transform: translateY(0px);">Practical usage</h2>
 							<div class="timeline" data-animate-el="" style="opacity: 1; transform: translateY(0px);">
 								<div class="timeline__block">
 									<div class="timeline__bullet"></div>
 									<div class="timeline__header">
-										<h4 class="timeline__title">Про бот</h4>
+										<h4 class="timeline__title">About the bot</h4>
 										<h5 class="timeline__meta"></h5>
 										<p class="timeline__timeframe"></p>
 									</div>
 									<div class="timeline__desc">
-										<p> Робочі файли: для фрілансерів та невеликих бізнесів, MyFyles дозволить легко та безпечно обмінюватися документами з клієнтами та партнерами. </p>
+										<p> Work Files: For freelancers and small businesses, MyFiles makes it easy and secure to share documents with clients and partners. </p>
 									</div>
 								</div>
 							</div>
@@ -133,7 +133,7 @@
 										<p class="timeline__timeframe"></p>
 									</div>
 									<div class="timeline__desc">
-										<p> Навчання вдома: для учнів що навчаються дистанційно, MyFyles допоможе зберігати та обмінюватися домашніми завданнями та навчальними матеріалами. </p>
+										<p> Studying at home: For distant learners, MyFiles will help you save and share homework and study materials. </p>
 									</div>
 								</div>
 								<div class="timeline__block">
@@ -144,7 +144,7 @@
 										<p class="timeline__timeframe"></p>
 									</div>
 									<div class="timeline__desc">
-										<p> Організація подорожей: зберігання квитків, бронювань готелів та інших документів для подорожей стає простіше та зручніше з MyFyles. Фотоальбоми: Ви можете використовувати MyFyles, щоб зручно зберігати та ділитися фотографіями з відпусток або свят. </p>
+										<p> Travel arrangements: Keeping tickets, hotel reservations and other travel documents is easier and more convenient with MyFiles. Photo Albums: You can use MyFiles to comfortably store and share  or holiday photos </p>
 									</div>
 								</div>
 							</div>
@@ -153,17 +153,17 @@
 				</section>
 				<div class="row about-timelines ss-animated" data-animate-block="">
 					<div class="column lg-6 tab-12">
-						<h2 class="text-pretitle" data-animate-el="" style="opacity: 1; transform: translateY(0px);">Про авторів</h2>
+						<h2 class="text-pretitle" data-animate-el="" style="opacity: 1; transform: translateY(0px);">About developers</h2>
 						<div class="timeline" data-animate-el="" style="opacity: 1; transform: translateY(0px);">
 							<div class="timeline__block">
 								<div class="timeline__bullet"></div>
 								<div class="timeline__header">
-									<h4 class="timeline__title">Черокасов Артемій</h4>
+									<h4 class="timeline__title">Cherkasov Artemy</h4>
 									<h5 class="timeline__meta"></h5>
 									<p class="timeline__timeframe"></p>
 								</div>
 								<div class="timeline__desc">
-									<p> Мене звуть Артемій, мені 15 років, і я навчаюся в 9-му класі Одеського приватного ліцею "Мрія". Закінчивши малу академію "ШАГ", я продовжую вчитися в "ШАЗІ". Хоча я визнаюся, що дещо лінивий, мені завжди подобалося творити щось нове. </p>
+									<p>My name is Artemy, I am 15 years old, and I study in the 9th grade of Odessa private lyceum "Mriya". After graduating from the junior academy "ITSTEP", I continue to study at " ITSTEP". Although I admit that I am somewhat lazy, I have always liked to create something new.  </p>
 								</div>
 							</div>
 						</div>
@@ -174,12 +174,12 @@
 							<div class="timeline__block">
 								<div class="timeline__bullet"></div>
 								<div class="timeline__header">
-									<h4 class="timeline__title">Константінов Іван</h4>
+									<h4 class="timeline__title">Konstantinov Ivan</h4>
 									<h5 class="timeline__meta"></h5>
 									<p class="timeline__timeframe"></p>
 								</div>
 								<div class="timeline__desc">
-									<p> Я розробник, цікавлюся back-end і desktop розробкою для цього вивчаю: "Python", "JS", "C#". Працюю з БД: "sqlite3", "MySQL", вчу "MongoDB". Захоплююся програмуванням з 2020 року, За цей час встиг спробувати не мало від участі в opensource проєктах до власних. Пробував себе в розробці читів, сайтів, ігор, веб-додатків, робототехніці. </p>
+									<p>I am a developer, interested in back-end and desktop development. I use "Python", "JS", "C#" for my projects. I work with following databases: "sqlite3", "MySQL", I am mastering "MongoDB". Passionate about programming since 2020. Since then, I have participatied in open source projects, as well as developed my own projects. I tried my hand at developing cheats, sites, games, web applications, and robotics. </p>
 								</div>
 							</div>
 						</div>
@@ -209,7 +209,7 @@
 								</div>
 								<div class="folio-list__item-text">
 									<div class="folio-list__item-cat"> Telegram BOT </div>
-									<div class="folio-list__item-title"> MyFyles </div>
+									<div class="folio-list__item-title"> MyFiles </div>
 								</div>
 							</a>
 							<a class="folio-list__proj-link" href="index.html#" title="project link">
@@ -219,7 +219,7 @@
 							</a>
 						</li>
 					</ul>
-					<h2> Наші чесні, непідкупні, справедливі відгуки... </h2>
+					<h2>Our honest, unbridled, fair reviews... </h2>
 				</div>
 				<div id="modal-01" hidden=""></div>
 				<div id="modal-02" hidden=""></div>
@@ -236,69 +236,69 @@
 								<div class="testimonial-slider__author">
 									<img src="assets/avatars/student.jpg" alt="Author image" class="testimonial-slider__avatar">
 									<cite class="testimonial-slider__cite">
-										<strong>Андрій Коваленко</strong>
-										<span>студент</span>
+										<strong>Andriy Kovalenko</strong>
+										<span>Freshman</span>
 									</cite>
 								</div>
-								<p> MyFyles став справжнім порятунком для мене під час дистанційного навчання. Відправка домашніх завдань та матеріалів через Telegram зробила процес набагато зручнішим. Плюс, мої файли тепер безпечні і організовані!</p>
+								<p> MyFiles became a real lifesaver for me during distant learning. Sending homework and materials via Telegram made the process quite convenient. Plus, my files are now safe and organized!</p>
 							</div>
 							<div class="testimonial-slider__slide swiper-slide swiper-slide-next" role="group" aria-label="2 / 4" style="width: 540px; margin-right: 80px;">
 								<div class="testimonial-slider__author">
 									<img src="assets/avatars/frilans_nigga.jpg" alt="Author image" class="testimonial-slider__avatar">
 									<cite class="testimonial-slider__cite">
 										<a href="" target="_blank">
-											<strong>Олена Петрова</strong>
+											<strong>Olena Petrova </strong>
 										</a>
-										<span>фрілансер</span>
+										<span>Freelancer</span>
 									</cite>
 								</div>
-								<p>Я постійно обмінююся файлами з клієнтами, і MyFyles допоміг мені зробити цей процес більш ефективним. Особливо мені подобається функція парольного захисту, яка надає додаткову безпеку моїм даним.</p>
+								<p>I share files with my clients all the time, and MyFiles has helped me to make this process more efficient. I especially like the password protection feature that provides extra security to my data.</p>
 							</div>
 							<div class="testimonial-slider__slide swiper-slide" role="group" aria-label="3 / 4" style="width: 540px; margin-right: 80px;">
 								<div class="testimonial-slider__author">
 									<img src="assets/avatars/photograph.jpg" alt="Author image" class="testimonial-slider__avatar">
 									<cite class="testimonial-slider__cite">
 										<a href="" target="_blank">
-											<strong>Максим Шевченко</strong>
+											<strong>Maks Shevchenko </strong>
 										</a>
-										<span>фотограф</span>
+										<span>Photographer</span>
 									</cite>
 								</div>
-								<p> Як професійний фотограф, я часто ділюся своїми роботами з клієнтами. З MyFyles це стало простіше та швидше. Також ціную можливість створення тимчасових файлів для короткострокових проектів. </p>
+								<p> As a professional photographer, I often share my work with clients. With MyFiles, it's easier and faster. Also appreciate the ability to create temporary files for short-term projects.</p>
 							</div>
 							<div class="testimonial-slider__slide swiper-slide" role="group" aria-label="4 / 4" style="width: 540px; margin-right: 80px;">
 								<div class="testimonial-slider__author">
 									<img src="assets/avatars/freshgirl.jpg" alt="Author image" class="testimonial-slider__avatar">
 									<cite class="testimonial-slider__cite">
-										<strong>Тетяна Крушельницька</strong>
-										<span>старшокласниця</span>
+										<strong>Tatiana Krushelnytska</strong>
+										<span>high school girl</span>
 									</cite>
 								</div>
-								<p>Я використовую MyFyles для обміну навчальними матеріалами з однокласниками. Це дуже зручно, особливо коли ми працюємо над груповими проектами. Також додатковий плюс - можливість встановлення пароля на важливі файли.</p>
+								<p>I use MyFiles to share study materials with my classmates. It`s really cool! Especially when we work on group projects. Also, an additional benefit to me is the ability to set a password on important files.</p>
 							</div>
 							<div class="testimonial-slider__slide swiper-slide" role="group" aria-label="3 / 4" style="width: 540px; margin-right: 80px;">
 								<div class="testimonial-slider__author">
 									<img src="assets/avatars/domohozyaika.jpg" alt="Author image" class="testimonial-slider__avatar">
 									<cite class="testimonial-slider__cite">
 										<a href="" target="_blank">
-											<strong>Ірина Васильєва</strong>
+											<strong>Iryna Vasylieva</strong>
 										</a>
-										<span>домогосподарка</span>
+										<span>Housewife</span>
 									</cite>
 								</div>
-								<p> MyFyles став чудовим інструментом для зберігання сімейних фотографій. Тепер я можу легко ділитися ними з родиною, не турбуючись про їх безпеку та конфіденційність. </p>
+								<p> MyFiles has become a great tool for storing family photos. Now I can easily share them with my family without worrying about their security and privacy. </p>
 							</div>
 							<div class="testimonial-slider__slide swiper-slide" role="group" aria-label="3 / 4" style="width: 540px; margin-right: 80px;">
 								<div class="testimonial-slider__author">
 									<img src="assets/avatars/bussines_man.jpg" alt="Author image" class="testimonial-slider__avatar">
 									<cite class="testimonial-slider__cite">
 										<a href="" target="_blank">
-											<strong>Володимир Сидоренко</strong>
+											<strong>Volodymyr Sydorenko</strong>
 										</a>
-										<span>маленький бізнес-власник</span>
+										<span>Small business owner</span>
 									</cite>
 								</div>
-								<p> Для мого малого бізнесу MyFyles став великою допомогою у обміні документами з партнерами. Це економить час і гарантує, що всі файли впорядковані та безпечні. </p>
+								<p> For my small business, MyFiles has been a great help in sharing documents with my partners. This saves time and ensures that all files are organized and safe. </p>
 							</div>
 						</div>
 						<div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets">
@@ -315,12 +315,12 @@
 			<div class="row contact-top">
 				<div class="column lg-12">
 					<h2 class="text-pretitle"></h2>
-					<p class="h1"> Якщо у вас є якісь питання або пропозиції пишить на нашу пошту </p>
+					<p class="h1"> If you have any inqiaries or suggestions, dont hesitate contacs us </p>
 				</div>
 			</div>
 			<div class="row contact-bottom">
 				<div class="column lg-3 md-5 tab-6 stack-on-550 contact-block">
-					<h3 class="text-pretitle">Пошта</h3>
+					<h3 class="text-pretitle">Gmail</h3>
 					<p class="contact-links">
 						<a href="mailto:MyFyles@gmail.com" class="mailtoui">MyFyles@gmail.com</a>
 						<br>
